--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,6 +4,10 @@
 <!--[if (IE 8)&!(IEMobile)]><html class="no-js lt-ie9" lang="en"><![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en"><!--<![endif]-->
 
+<head>
+{% include head.html %}
+</head>
+
 <body id="page">
 
 {% include navigation.html %}
